--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 
-*.aspx linguist-language=C#
+*.aspx linguist-detectable=false
+*.cs linguist-detectable=true  
