--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,5 @@
 
 *.aspx linguist-detectable=false
 *.cs linguist-detectable=true  
+*.shader linguist-detectable=false  
+*.cginc linguist-detectable=false  
